# lensky-py-lab

./: .gitignore  CLAUDE.md  README.md  plot_config.py  pyproject.toml  requirements.txt
archive/: final_results_processing_OOP.ipynb  research_base_notebook_local.ipynb
data/OMRI_RESEARCH_RESULTS/IMS/: MATA_rainfall.csv  RH_rainfall_ZYM_121710.csv
data/OMRI_RESEARCH_RESULTS/MATA_GCC/: NSRS_DS.csv  NSRS_EV_unclear.csv  PLANET.csv
data/OMRI_RESEARCH_RESULTS/MATA_NDVI/: MODIS.csv  NSRS_DW_EV.csv  PLANET.csv  VENuS.csv
data/OMRI_RESEARCH_RESULTS/RH_NDVI/: L8.csv  NSRS_1.csv  NSRS_1_B.csv  S2.csv
data/raw/: README.md
data/research_results/IMS/: MATA_temp.csv  RH_rainfall_ZY_121702.csv  RH_temp.csv
data/research_results/MATA_GCC/: L8.csv  MODIS.csv  NSRS_DW_EV.csv  S2.csv  VENuS.csv
data/research_results/MATA_NDVI/: L8.csv  NSRS_DS.csv  NSRS_EV_unclear.csv  S2.csv
data/research_results/RH_NDVI/: MODIS.csv  NSRS_2.csv  NSRS_2_B.csv  NSRS_3.csv  NSRS_3_B.csv
scripts/: _gen_local_notebook.py  example_rh_ndvi.py  run_daily_graphs.py  run_rh_ndvi.py
src/lensky_py_lab/: __init__.py  base_entities.py  configs.py  constants.py  data_cleaning.py  gap_utils.py
src/lensky_py_lab/clients/: gee_client.py  ims_client.py
src/lensky_py_lab/io/: csv_loader.py
src/lensky_py_lab/models/: site.py  source.py
src/lensky_py_lab/phenology/: __init__.py  decomposition_validation.py  phenolopy_integration.py
src/lensky_py_lab/pipeline/: cleaner.py  processor.py  smoother.py
tests/: test_calibration.py  test_gap_segments.py  test_phenology.py
(+12 files in other folders)
